--- a/Adding dropout.ipynb
+++ b/Adding dropout.ipynb
@@ -6,12 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading necessary Libraries\n",
     "from __future__ import division\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
     "import  scipy.misc\n",
-    "import glob"
+    "import glob\n",
+    "import numpy as np\n",
+    "from keras import layers\n",
+    "from keras.layers import Input, Dense, Activation, ZeroPadding1D, BatchNormalization, Flatten, Conv1D\n",
+    "from keras.layers import AveragePooling1D, MaxPooling1D, Dropout, GlobalMaxPooling1D, GlobalAveragePooling1D\n",
+    "from keras.models import Model, Sequential\n",
+    "from keras.preprocessing import image\n",
+    "from keras.utils import layer_utils\n",
+    "from keras.utils.data_utils import get_file\n",
+    "from keras.applications.imagenet_utils import preprocess_input\n",
+    "\n",
+    "from IPython.display import SVG\n",
+    "from keras.utils.vis_utils import model_to_dot\n",
+    "from keras.utils import plot_model\n",
+    "import keras.backend as K"
    ]
   },
   {
@@ -429,43 +444,21 @@
     }
    ],
    "source": [
+    "# Loading the data\n",
     "train=np.empty(shape=(390,200,250))\n",
     "y=[]\n",
-    "counter=0\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/young_diab/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(200,250))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
     "    y.append(0)\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/Non_Diabetes/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(200,250))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
     "    y.append(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "390"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "counter"
    ]
   },
   {
@@ -498,23 +491,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from keras import layers\n",
-    "from keras.layers import Input, Dense, Activation, ZeroPadding1D, BatchNormalization, Flatten, Conv1D\n",
-    "from keras.layers import AveragePooling1D, MaxPooling1D, Dropout, GlobalMaxPooling1D, GlobalAveragePooling1D\n",
-    "from keras.models import Model, Sequential\n",
-    "from keras.preprocessing import image\n",
-    "from keras.utils import layer_utils\n",
-    "from keras.utils.data_utils import get_file\n",
-    "from keras.applications.imagenet_utils import preprocess_input\n",
-    "\n",
-    "from IPython.display import SVG\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "from keras.utils import plot_model\n",
-    "import keras.backend as K\n",
     "def DocumentModel(input_shape):\n",
     "    \"\"\"\n",
-    "    Implementation of the HappyModel.\n",
+    "    Implementation of the DocumentModel.\n",
     "\n",
     "    Arguments:\n",
     "    input_shape -- shape of the images of the dataset\n",
@@ -768,13 +747,7 @@
       "312/312 [==============================] - 5s 16ms/step - loss: 0.5508 - acc: 0.7372\n",
       "Epoch 2/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.3339 - acc: 0.9103\n",
-      "Epoch 3/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 3/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.2264 - acc: 0.9487\n",
       "Epoch 4/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1671 - acc: 0.9519\n",
@@ -1128,13 +1101,7 @@
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1538 - acc: 0.9679\n",
       "Epoch 8/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1512 - acc: 0.9583\n",
-      "Epoch 9/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 9/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1391 - acc: 0.9679\n",
       "Epoch 10/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1181 - acc: 0.9776\n",
@@ -1488,13 +1455,7 @@
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1290 - acc: 0.9679\n",
       "Epoch 14/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1227 - acc: 0.9744\n",
-      "Epoch 15/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 15/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1320 - acc: 0.9679\n",
       "Epoch 16/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1218 - acc: 0.9679\n",
@@ -2210,13 +2171,7 @@
       "312/312 [==============================] - 2s 6ms/step - loss: 0.1794 - acc: 0.9615\n",
       "Epoch 6/20\n",
       "312/312 [==============================] - 2s 6ms/step - loss: 0.1504 - acc: 0.9647\n",
-      "Epoch 7/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 7/20\n",
       "312/312 [==============================] - 2s 6ms/step - loss: 0.1356 - acc: 0.9647\n",
       "Epoch 8/20\n",
       "312/312 [==============================] - 2s 5ms/step - loss: 0.1120 - acc: 0.9744\n",
@@ -2568,13 +2523,7 @@
       "312/312 [==============================] - 2s 6ms/step - loss: 0.1037 - acc: 0.9712\n",
       "Epoch 11/20\n",
       "312/312 [==============================] - 2s 6ms/step - loss: 0.0863 - acc: 0.9840\n",
-      "Epoch 12/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 12/20\n",
       "312/312 [==============================] - 2s 6ms/step - loss: 0.0946 - acc: 0.9776\n",
       "Epoch 13/20\n",
       "312/312 [==============================] - 2s 6ms/step - loss: 0.0547 - acc: 0.9936\n",
@@ -2811,13 +2760,6 @@
     "print('Max scores',np.max(scores))\n",
     "print('STD',np.std(scores))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
