--- a/ResNet Type1 Vs. Healthy .ipynb
+++ b/ResNet Type1 Vs. Healthy .ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing useful libraries\n",
     "import numpy as np\n",
     "import keras\n",
     "from keras import layers\n",
@@ -41,11 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GRADED FUNCTION: identity_block\n",
-    "\n",
     "def identity_block(X, f, filters, stage, block):\n",
     "    \"\"\"\n",
-    "    Implementation of the identity block as defined in Figure 3\n",
+    "    Implementation of the identity block \n",
     "    \n",
     "    Arguments:\n",
     "    X -- input tensor of shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
@@ -65,30 +64,30 @@
     "    # Retrieve Filters\n",
     "    F1, F2, F3 = filters\n",
     "    \n",
-    "    # Save the input value. You'll need this later to add back to the main path. \n",
+    "\n",
     "    X_shortcut = X\n",
     "    \n",
-    "    # First component of main path\n",
+    "\n",
     "    X = Conv2D(filters = F1, kernel_size = (1, 1), strides = (1,1), padding = 'valid', name = conv_name_base + '2a', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "    X = BatchNormalization(axis = 3, name = bn_name_base + '2a')(X)\n",
     "    X = Activation('relu')(X)\n",
     "    \n",
-    "    ### START CODE HERE ###\n",
+    "\n",
     "    \n",
-    "    # Second component of main path (≈3 lines)\n",
+    "\n",
     "    X = Conv2D(filters = F2, kernel_size = (f, f), strides = (1, 1), padding = 'same', name = conv_name_base + '2b', kernel_initializer = glorot_uniform(seed = 0))(X)\n",
     "    X = BatchNormalization(axis = 3, name = bn_name_base + '2b')(X)\n",
     "    X = Activation('relu')(X)\n",
     "\n",
-    "    # Third component of main path (≈2 lines)\n",
+    "\n",
     "    X = Conv2D(filters = F3, kernel_size = (1, 1), strides = (1, 1), padding = 'valid', name = conv_name_base + '2c', kernel_initializer = glorot_uniform(seed = 0))(X)\n",
     "    X = BatchNormalization(axis = 3, name = bn_name_base + '2c')(X)\n",
     "\n",
-    "    # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
+    "\n",
     "    X = Add()([X, X_shortcut])\n",
     "    X = Activation('relu')(X)\n",
     "    \n",
-    "    ### END CODE HERE ###\n",
+    "\n",
     "    \n",
     "    return X"
    ]
@@ -99,11 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GRADED FUNCTION: convolutional_block\n",
-    "\n",
     "def convolutional_block(X, f, filters, stage, block, s=2):\n",
     "    \"\"\"\n",
-    "    Implementation of the convolutional block as defined in Figure 4\n",
+    "    Implementation of the convolutional block\n",
     "\n",
     "    Arguments:\n",
     "    X -- input tensor of shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
@@ -127,32 +124,32 @@
     "    # Save the input value\n",
     "    X_shortcut = X\n",
     "\n",
-    "    ##### MAIN PATH #####\n",
-    "    # First component of main path \n",
+    "\n",
+    "\n",
     "    X = Conv2D(filters=F1, kernel_size=(1, 1), strides=(s, s), padding='valid', name=conv_name_base + '2a', kernel_initializer=glorot_uniform(seed=0))(X)\n",
     "    X = BatchNormalization(axis=3, name=bn_name_base + '2a')(X)\n",
     "    X = Activation('relu')(X)\n",
     "\n",
-    "    ### START CODE HERE ###\n",
     "\n",
-    "    # Second component of main path (≈3 lines)\n",
+    "\n",
+    "\n",
     "    X = Conv2D(filters=F2, kernel_size=(f, f), strides=(1, 1), padding='same', name=conv_name_base + '2b', kernel_initializer=glorot_uniform(seed=0))(X)\n",
     "    X = BatchNormalization(axis=3, name=bn_name_base + '2b')(X)\n",
     "    X = Activation('relu')(X)\n",
     "\n",
-    "    # Third component of main path (≈2 lines)\n",
+    "\n",
     "    X = Conv2D(filters=F3, kernel_size=(1, 1), strides=(1, 1), padding='valid', name=conv_name_base + '2c', kernel_initializer=glorot_uniform(seed=0))(X)\n",
     "    X = BatchNormalization(axis=3, name=bn_name_base + '2c')(X)\n",
     "\n",
-    "    ##### SHORTCUT PATH #### (≈2 lines)\n",
+    "\n",
     "    X_shortcut = Conv2D(filters=F3, kernel_size=(1, 1), strides=(s, s), padding='valid', name=conv_name_base + '1', kernel_initializer=glorot_uniform(seed=0))(X_shortcut)\n",
     "    X_shortcut = BatchNormalization(axis=3, name=bn_name_base + '1')(X_shortcut)\n",
     "\n",
-    "    # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
+    "\n",
     "    X = Add()([X, X_shortcut]) \n",
     "    X = Activation('relu')(X)\n",
     "\n",
-    "    ### END CODE HERE ###\n",
+    "\n",
     "    return X"
    ]
   },
@@ -162,11 +159,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GRADED FUNCTION: ResNet50\n",
-    "\n",
-    "\n",
-    "# GRADED FUNCTION: ResNet50\n",
-    "\n",
     "def ResNet50(input_shape=(64, 64, 3), classes=6):\n",
     "    \"\"\"\n",
     "    Implementation of the popular ResNet50 the following architecture:\n",
@@ -198,15 +190,15 @@
     "    X = identity_block(X, 3, [64, 64, 256], stage=2, block='b')\n",
     "    X = identity_block(X, 3, [64, 64, 256], stage=2, block='c')\n",
     "\n",
-    "    ### START CODE HERE ###\n",
     "\n",
-    "    # Stage 3 (≈4 lines)\n",
+    "\n",
+    "    # Stage 3 \n",
     "    X = convolutional_block(X, f=3, filters=[128, 128, 512], stage=3, block='a', s=2)\n",
     "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='b')\n",
     "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='c')\n",
     "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='d')\n",
     "\n",
-    "    # Stage 4 (≈6 lines)\n",
+    "    # Stage 4 \n",
     "    X = convolutional_block(X, f=3, filters=[256, 256, 1024], stage=4, block='a', s=2)\n",
     "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='b')\n",
     "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='c')\n",
@@ -214,7 +206,7 @@
     "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='e')\n",
     "    X = identity_block(X, 3, [256, 256, 1024], stage=4, block='f')\n",
     "\n",
-    "    # Stage 5 (≈3 lines)\n",
+    "    # Stage 5 \n",
     "    X = X = convolutional_block(X, f=3, filters=[512, 512, 2048], stage=5, block='a', s=2)\n",
     "    X = identity_block(X, 3, [512, 512, 2048], stage=5, block='b')\n",
     "    X = identity_block(X, 3, [512, 512, 2048], stage=5, block='c')\n",
@@ -222,7 +214,7 @@
     "    # AVGPOOL (≈1 line). Use \"X = AveragePooling2D(...)(X)\"\n",
     "    X = AveragePooling2D(pool_size=(2, 2), padding='same')(X)\n",
     "\n",
-    "    ### END CODE HERE ###\n",
+    "\n",
     "\n",
     "    # output layer\n",
     "    X = Flatten()(X)\n",
