--- a/Type1vsType2.ipynb
+++ b/Type1vsType2.ipynb
@@ -322,41 +322,18 @@
    "source": [
     "train=np.empty(shape=(288,450,500))\n",
     "y=[]\n",
-    "counter=0\n",
-    "i = 0\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/Type 2 (PALM)/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(450,500))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
     "    y.append(0)\n",
-    "    i += 1\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/Type 1 (PALM)/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(450,500))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
-    "    y.append(1)\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "288\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(i)"
+    "    y.append(1)"
    ]
   },
   {
@@ -483,7 +460,7 @@
     "import keras.backend as K\n",
     "def DocumentModel(input_shape):\n",
     "    \"\"\"\n",
-    "    Implementation of the HappyModel.\n",
+    "    Implementation of the DocumentModel.\n",
     "\n",
     "    Arguments:\n",
     "    input_shape -- shape of the images of the dataset\n",
@@ -737,13 +714,7 @@
       "230/230 [==============================] - 8s 35ms/step - loss: 0.6629 - acc: 0.6174\n",
       "Epoch 2/20\n",
       "230/230 [==============================] - 4s 17ms/step - loss: 0.6155 - acc: 0.6783\n",
-      "Epoch 3/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 3/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.5516 - acc: 0.7522\n",
       "Epoch 4/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.4713 - acc: 0.7957\n",
@@ -1093,13 +1064,7 @@
       "230/230 [==============================] - 4s 16ms/step - loss: 0.5142 - acc: 0.7522\n",
       "Epoch 6/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.4854 - acc: 0.7565\n",
-      "Epoch 7/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 7/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.4597 - acc: 0.8087\n",
       "Epoch 8/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.3885 - acc: 0.8609\n",
@@ -1449,13 +1414,7 @@
       "230/230 [==============================] - 4s 19ms/step - loss: 0.4096 - acc: 0.8304\n",
       "Epoch 10/20\n",
       "230/230 [==============================] - 4s 18ms/step - loss: 0.3460 - acc: 0.8870\n",
-      "Epoch 11/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 11/20\n",
       "230/230 [==============================] - 5s 20ms/step - loss: 0.2903 - acc: 0.9217\n",
       "Epoch 12/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.2297 - acc: 0.9391\n",
@@ -1805,13 +1764,7 @@
       "230/230 [==============================] - 4s 17ms/step - loss: 0.1335 - acc: 0.9783\n",
       "Epoch 14/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.1033 - acc: 0.9870\n",
-      "Epoch 15/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 15/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.1316 - acc: 0.9609\n",
       "Epoch 16/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.0988 - acc: 0.9783\n",
@@ -2161,13 +2114,7 @@
       "230/230 [==============================] - 4s 16ms/step - loss: 0.1713 - acc: 0.9391\n",
       "Epoch 18/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.1674 - acc: 0.9348\n",
-      "Epoch 19/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 19/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.1526 - acc: 0.9565\n",
       "Epoch 20/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.1277 - acc: 0.9652\n",
@@ -2519,13 +2466,7 @@
       "230/230 [==============================] - 24s 106ms/step - loss: 0.6815 - acc: 0.5304\n",
       "Epoch 2/20\n",
       "230/230 [==============================] - 4s 17ms/step - loss: 0.6433 - acc: 0.6217\n",
-      "Epoch 3/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 3/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.5891 - acc: 0.7174\n",
       "Epoch 4/20\n",
       "230/230 [==============================] - 4s 16ms/step - loss: 0.5364 - acc: 0.7870\n",
@@ -2780,13 +2721,6 @@
     "print('Max scores',np.max(scores))\n",
     "print('STD',np.std(scores))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
