--- a/Diabetes_Research.ipynb
+++ b/Diabetes_Research.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing useful libraries\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
@@ -13,7 +14,21 @@
     "import glob\n",
     "import os\n",
     "from sklearn import preprocessing\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from keras import layers\n",
+    "from keras.layers import Input, Dense, Activation, ZeroPadding1D, BatchNormalization, Flatten, Conv1D\n",
+    "from keras.layers import AveragePooling1D, MaxPooling1D, Dropout, GlobalMaxPooling1D, GlobalAveragePooling1D \n",
+    "from keras.models import Model, Sequential\n",
+    "from keras.preprocessing import image\n",
+    "from keras.utils import layer_utils\n",
+    "from keras.utils.data_utils import get_file\n",
+    "from keras.applications.imagenet_utils import preprocess_input\n",
+    " \n",
+    "from IPython.display import SVG\n",
+    "from keras.utils.vis_utils import model_to_dot\n",
+    "from keras.utils import plot_model\n",
+    "import keras.backend as K"
    ]
   },
   {
@@ -577,26 +592,21 @@
     }
    ],
    "source": [
+    "# Loading the data\n",
     "train=np.empty(shape=(530,200,250))\n",
     "y=[]\n",
-    "counter=0\n",
-    "i = 0\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/Diab_global/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(200,250))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
     "    y.append(1)\n",
-    "    i += 1\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/Non_Diabetes/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(200,250))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
-    "    y.append(0)\n",
-    "    i += 1"
+    "    y.append(0)"
    ]
   },
   {
@@ -605,9 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = train/255.0\n",
-    "# print(train)\n",
-    "# print(i)"
+    "train = train/255.0"
    ]
   },
   {
@@ -626,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Perfect   , now   having train and test  we also  need to shuffle  the data  as a good practice  for evaluation  and fiting \n",
+    "#Perfect, now having train and test we also need to shuffle the data as a good practice for evaluation and fitting \n",
     "from random import shuffle\n",
     "N=train.shape[0]\n",
     "ind_list = [i for i in range(N)]\n",
@@ -645,7 +653,6 @@
    "outputs": [],
    "source": [
     "scores = []\n",
-    "\n",
     "for i in range(50):\n",
     "    from sklearn.model_selection import train_test_split\n",
     "    X_train, X_test, y_train, y_test = train_test_split(train, y, test_size=0.2, random_state=i)"
@@ -657,23 +664,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from keras import layers\n",
-    "from keras.layers import Input, Dense, Activation, ZeroPadding1D, BatchNormalization, Flatten, Conv1D\n",
-    "from keras.layers import AveragePooling1D, MaxPooling1D, Dropout, GlobalMaxPooling1D, GlobalAveragePooling1D \n",
-    "from keras.models import Model, Sequential\n",
-    "from keras.preprocessing import image\n",
-    "from keras.utils import layer_utils\n",
-    "from keras.utils.data_utils import get_file\n",
-    "from keras.applications.imagenet_utils import preprocess_input\n",
-    " \n",
-    "from IPython.display import SVG\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "from keras.utils import plot_model\n",
-    "import keras.backend as K\n",
     "def DocumentModel(input_shape):\n",
     "    \"\"\"\n",
-    "    Implementation of the HappyModel.\n",
+    "    Implementation of the DocumentModel.\n",
     "    \n",
     "    Arguments:\n",
     "    input_shape -- shape of the images of the dataset\n",
