--- a/Type1VersusHealty.ipynb
+++ b/Type1VersusHealty.ipynb
@@ -6,11 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing useful packages\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
     "import  scipy.misc\n",
-    "import glob"
+    "import glob\n",
+    "import numpy as np\n",
+    "from keras import layers\n",
+    "from keras.layers import Input, Dense, Activation, ZeroPadding1D, BatchNormalization, Flatten, Conv1D\n",
+    "from keras.layers import AveragePooling1D, MaxPooling1D, Dropout, GlobalMaxPooling1D, GlobalAveragePooling1D\n",
+    "from keras.models import Model, Sequential\n",
+    "from keras.preprocessing import image\n",
+    "from keras.utils import layer_utils\n",
+    "from keras.utils.data_utils import get_file\n",
+    "from keras.applications.imagenet_utils import preprocess_input\n",
+    "\n",
+    "from IPython.display import SVG\n",
+    "from keras.utils.vis_utils import model_to_dot\n",
+    "from keras.utils import plot_model\n",
+    "import keras.backend as K"
    ]
   },
   {
@@ -370,86 +385,21 @@
     }
    ],
    "source": [
+    "# Loading useful data\n",
     "train=np.empty(shape=(336,450,500))\n",
     "y=[]\n",
-    "counter=0\n",
-    "i = 0\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/Type 1 (PALM)/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(450,500))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
     "    y.append(0)\n",
-    "    i += 1\n",
     "for filename in glob.iglob('/Users/siddhantbansal/Desktop/palm/*.*'):\n",
     "    print(filename)\n",
     "    img=scipy.misc.imread(filename,mode='L')\n",
     "    img=scipy.misc.imresize(img,(450,500))\n",
     "    train[counter]=img\n",
-    "    counter+=1\n",
-    "    y.append(1)\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "336"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "336"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "336"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(y)"
+    "    y.append(1)"
    ]
   },
   {
@@ -570,23 +520,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from keras import layers\n",
-    "from keras.layers import Input, Dense, Activation, ZeroPadding1D, BatchNormalization, Flatten, Conv1D\n",
-    "from keras.layers import AveragePooling1D, MaxPooling1D, Dropout, GlobalMaxPooling1D, GlobalAveragePooling1D\n",
-    "from keras.models import Model, Sequential\n",
-    "from keras.preprocessing import image\n",
-    "from keras.utils import layer_utils\n",
-    "from keras.utils.data_utils import get_file\n",
-    "from keras.applications.imagenet_utils import preprocess_input\n",
-    "\n",
-    "from IPython.display import SVG\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "from keras.utils import plot_model\n",
-    "import keras.backend as K\n",
     "def DocumentModel(input_shape):\n",
     "    \"\"\"\n",
-    "    Implementation of the HappyModel.\n",
+    "    Implementation of the DocumentModel.\n",
     "\n",
     "    Arguments:\n",
     "    input_shape -- shape of the images of the dataset\n",
@@ -934,13 +870,7 @@
       "268/268 [==============================] - 8s 30ms/step - loss: 0.6844 - acc: 0.5112\n",
       "Epoch 2/20\n",
       "268/268 [==============================] - 4s 15ms/step - loss: 0.6100 - acc: 0.7873\n",
-      "Epoch 3/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 3/20\n",
       "268/268 [==============================] - 4s 15ms/step - loss: 0.4982 - acc: 0.8209\n",
       "Epoch 4/20\n",
       "268/268 [==============================] - 4s 15ms/step - loss: 0.3982 - acc: 0.8657\n",
@@ -1290,13 +1220,7 @@
       "268/268 [==============================] - 4s 16ms/step - loss: 0.2756 - acc: 0.9067\n",
       "Epoch 6/20\n",
       "268/268 [==============================] - 5s 18ms/step - loss: 0.3122 - acc: 0.8806\n",
-      "Epoch 7/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 7/20\n",
       "268/268 [==============================] - 4s 17ms/step - loss: 0.2355 - acc: 0.9216\n",
       "Epoch 8/20\n",
       "268/268 [==============================] - 5s 17ms/step - loss: 0.2116 - acc: 0.9179\n",
@@ -1646,13 +1570,7 @@
       "268/268 [==============================] - 4s 17ms/step - loss: 0.1963 - acc: 0.9552\n",
       "Epoch 10/20\n",
       "268/268 [==============================] - 5s 18ms/step - loss: 0.1829 - acc: 0.9515\n",
-      "Epoch 11/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 11/20\n",
       "268/268 [==============================] - 5s 17ms/step - loss: 0.1338 - acc: 0.9739\n",
       "Epoch 12/20\n",
       "268/268 [==============================] - 5s 18ms/step - loss: 0.1306 - acc: 0.9590\n",
@@ -2002,13 +1920,7 @@
       "268/268 [==============================] - 5s 17ms/step - loss: 0.1465 - acc: 0.9590\n",
       "Epoch 14/20\n",
       "268/268 [==============================] - 4s 17ms/step - loss: 0.1127 - acc: 0.9701\n",
-      "Epoch 15/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 15/20\n",
       "268/268 [==============================] - 4s 16ms/step - loss: 0.1082 - acc: 0.9739\n",
       "Epoch 16/20\n",
       "268/268 [==============================] - 4s 15ms/step - loss: 0.0834 - acc: 0.9776\n",
@@ -2128,20 +2040,6 @@
     "print('Max score', np.max(scores))\n",
     "print(\"Standard Deviation\", np.std(scores))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1 hz 0.01 duty cycle 1 V min output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
